
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
	PROJECT(BIMCM_ENV_TEST)
ENDIF()

GET_CMAKE_PROPERTY(orig_variable_names VARIABLES)
LIST(SORT orig_variable_names)
LIST(LENGTH orig_variable_names orig_variable_names_size)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
FIND_PACKAGE(BIMCM)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")

TEST_VAR_PATH_EXISTS(BIMCM_REQUIRED_ENV_GIT_EXECUTABLE)
TEST_VAR_PATH_EXISTS(BIMCM_REQUIRED_ENV_7ZIP)

TEST_VAR_DEFINED(BIMCM_REQUIRED_ENV_TMP_PATH)
TEST_VAR_DEFINED(BIMCM_REQUIRED_ENV_GIT_MIN_VERSION)
