
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
	PROJECT(CMLIB_ARCHIVE_TEST)
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../")
FIND_PACKAGE(CMLIB)

SET(archive_name archive.bz2)
SET(output_dir "${CMAKE_CURRENT_BINARY_DIR}/${archive_name}/")
FILE(MAKE_DIRECTORY ${output_dir})
CMLIB_ARCHIVE_EXTRACT(
	ARCHIVE_PATH "${CMAKE_CURRENT_LIST_DIR}/../archive/${archive_name}"
	ARCHIVE_TYPE "invalid_archive_type"
	OUTPUT_DIRECTORY "${output_dir}"
)
