##
#
# CHeck if the check for recorse Directory entries works.
# Let A;B;C is directory entry. There cannot be directory or file entry with
# keywords in form A;B;C;<another_keyword> - this can lead cache corruption.
#
# This test shall omit an error!
#

IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
	CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
	PROJECT(CMLIB_ARCHIVE_TEST)
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../")
FIND_PACKAGE(CMLIB)

SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib/cmakelib-test.git")

SET(TEST_CACHE_FILE_RECURSE)
SET(TEST_CACHE_DIRECTORY_RECURSE)



#
# Download zip as FILE
# Comment out OUTPUT_PATH_VAR --> function omit error
#
CMLIB_DEPENDENCY(
	KEYWORDS DIRECTORY MESSY A
	TYPE DIRECTORY
	URI "${GIT_DOWNLOAD_URI}"
	OUTPUT_PATH_VAR output_path
)

IF(TEST_CACHE_DIRECTORY_RECURSE)
	CMLIB_DEPENDENCY(
		KEYWORDS DIRECTORY MESSY A NOTALLOWED
		TYPE DIRECTORY
		URI "${GIT_DOWNLOAD_URI}"
		OUTPUT_PATH_VAR output_path
	)
	CMLIB_CACHE_DELETE(KEYWORDS DIRECTORY MESSY A)
ELSEIF(TEST_CACHE_FILE_RECURSE)
	CMLIB_DEPENDENCY(
		KEYWORDS DIRECTORY MESSY A NOTALLOWED
		TYPE FILE
		URI "${GIT_DOWNLOAD_URI}"
		URI_PATH "TEST_MODULE.cmake"
		OUTPUT_PATH_VAR output_path
	)
	CMLIB_CACHE_DELETE(KEYWORDS DIRECTORY MESSY A NOTALLOWED)
ELSE()
	MESSAGE(FATAL_ERROR "Test not choosen! Error!")
ENDIF()

